# antenna_tracker_ros2_humble

./: HANDOFF.md  README.md  cppcheck-suppressions.txt
.github/workflows/: ci_cd.yml  cppcheck.yml  nightly_sim.yml
docker/: Dockerfile  docker-compose.yml
firmware/: app.overlay  esp32_lora_can_bridge.ino  prj.conf
firmware/src/: main.c
firmware_esp32/: CMakeLists.txt  app.overlay  prj.conf
firmware_esp32/src/: main.c
scripts/: acados_ocp.json  balloon_sim.py  generate_nmpc_solver.py  noise_sweep_matrix.py  setup_can.sh  test_noise_sweep.sh  test_sim_auto_e2e.py  test_sim_auto_e2e.sh  test_sim_noise_e2e.sh
scripts/c_generated_code/: Makefile
scripts/c_generated_code/antenna_tracker_model/: antenna_tracker_expl_ode_fun.c  antenna_tracker_expl_vde_adj.c  antenna_tracker_expl_vde_forw.c
solver/: run_all.py  verify_complementary_filter.py  verify_controller.py  verify_kalman.py  verify_navigation.py  verify_pid.py
src/antenna_tracker_bringup/: CMakeLists.txt  package.xml
src/antenna_tracker_bringup/config/: hardware_params.yaml  sim_params.yaml
src/antenna_tracker_bringup/launch/: hardware.launch.py  sim.launch.py
src/antenna_tracker_bringup/test/: test_bringup_launch.py
src/antenna_tracker_controller/: CMakeLists.txt
src/antenna_tracker_controller/include/antenna_tracker_controller/: controller_node.hpp  kalman_filter.hpp  mpc_controller.hpp  navigation_node.hpp  pid_controller.hpp  sensor_fusion_node.hpp  state_machine_node.hpp
src/antenna_tracker_controller/src/: complementary_filter.cpp  controller_node.cpp  kalman_filter.cpp  mpc_controller.cpp  navigation_node.cpp  pid_controller.cpp  sensor_fusion_node.cpp  state_machine_node.cpp
src/antenna_tracker_controller/test/: test_complementary_filter.cpp  test_kalman_filter.cpp  test_mpc_controller.cpp  test_navigation.cpp  test_pid_controller.cpp
src/antenna_tracker_hardware/: CMakeLists.txt  package.xml
src/antenna_tracker_hardware/include/antenna_tracker_hardware/: can_bridge_node.hpp  can_frame_codec.hpp
src/antenna_tracker_hardware/src/: can_bridge_node.cpp  can_frame_codec.cpp
src/antenna_tracker_hardware/test/: test_can_frame_codec.cpp
src/antenna_tracker_msgs/: CMakeLists.txt
src/antenna_tracker_msgs/msg/: Heartbeat.msg
src/antenna_tracker_msgs/srv/: SetZeroOffset.srv
src/antenna_tracker_simulation/: CMakeLists.txt  package.xml
src/antenna_tracker_simulation/config/: sim_params.yaml
src/antenna_tracker_simulation/include/antenna_tracker_simulation/: sim_motor_model.hpp
src/antenna_tracker_simulation/launch/: sim.launch.py
src/antenna_tracker_simulation/src/: sim_motor_bridge_node.cpp  sim_motor_model.cpp
src/antenna_tracker_simulation/test/: test_sim_launch.py  test_sim_motor_model.cpp
src/antenna_tracker_simulation/urdf/: antenna_tracker.urdf.xacro
src/antenna_tracker_simulation/worlds/: antenna_tracker.world
src/antenna_tracker_web/: CMakeLists.txt  package.xml
src/antenna_tracker_web/src/: web_server_node.py
src/antenna_tracker_web/test/: test_web_server_node.py
src/antenna_tracker_web/web/: app.js  index.html
