<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antenna_tracker_web</name>
  <version>1.0.0</version>
  <description>Web dashboard for antenna tracker via rosbridge WebSocket</description>
  <maintainer email="hyeonsu@uniqstar.com">Hyeonsu Park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>antenna_tracker_msgs</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
